--- a/package.json
+++ b/package.json
@@ -14,40 +14,36 @@
   },
   "module": "commonjs",
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.4",
     "@gluestack-style/react": "latest",
     "@gluestack-ui/config": "latest",
     "@gluestack-ui/themed": "latest",
-    "@hookform/resolvers": "^3.3.4",
-    "@react-navigation/drawer": "^6.6.7",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "^51.0.8",
-    "expo-font": "~12.0.5",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "expo": "^51.0.37",
+    "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
-    "expo-splash-screen": "~0.27.4",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
-    "lucide-react-native": "^0.314.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "react-native-web": "~0.19.6",
-    "zod": "^3.22.4"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.75.4",
+    "react-native-reanimated": "~3.15.5",
+    "react-native-safe-area-context": "4.11.0",
+    "react-native-screens": "3.34.0",
+    "react-native-svg": "15.7.1",
+    "react-native-web": "~0.19.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.2",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "@babel/core": "^7.25.8",
+    "@types/babel__core": "^7.20.5",
+    "@types/react": "~18.3.11",
+    "jest": "^29.7.0",
+    "jest-expo": "~51.0.4",
+    "react-test-renderer": "18.3.1",
+    "typescript": "^5.6.3"
   },
   "private": true
 }
